@startuml

title Grafick Class Diagram

  namespace Laba4 {
    namespace Grafick {
      class Axi {
          + Axi()
          ~ draw()
      }
    }
  }


  namespace Laba4 {
    namespace Grafick {
      class Comment {
          - comment : String
          + Comment()
          + draw()
          + printComment()
          + setComment()
      }
    }
  }


  namespace Laba4 {
    namespace Grafick {
      class Curve {
          - dots : Dot[]
          + Curve()
          ~ draw()
      }
    }
  }


  namespace Laba4 {
    namespace Grafick {
      class Dot {
          - x : double
          - y : double
          + Dot()
          + getX()
          + getY()
          ~ draw()
      }
    }
  }


  namespace Laba4 {
    namespace Grafick {
      abstract class Graph {
          - color : String
          + getColor()
          + setColor()
          ~ draw()
      }
    }
  }


  namespace Laba4 {
    namespace Grafick {
      class Grid {
          - scaleX : double
          - scaleY : double
          + Grid()
          + Grid()
          + setScaleX()
          + setScaleY()
          ~ draw()
      }
    }
  }


  namespace Laba4 {
    namespace Grafick {
      class Window {
          - axis : List<Axi>
          - comments : List<Comment>
          - curves : List<Curve>
          - height : int
          - width : int
          + Window()
          + Window()
          + addAxi()
          + addComment()
          + addCurves()
          + changeScale()
          + drawFunctions()
          + drawPlane()
      }
    }
  }


  Laba4.Grafick.Axi -up-|> Laba4.Grafick.Graph
  Laba4.Grafick.Axi o-- Laba4.Grafick.Dot : A
  Laba4.Grafick.Axi o-- Laba4.Grafick.Dot : B
  Laba4.Grafick.Comment -up-|> Laba4.Grafick.Graph
  Laba4.Grafick.Curve -up-|> Laba4.Grafick.Graph
  Laba4.Grafick.Dot -up-|> Laba4.Grafick.Graph
  Laba4.Grafick.Grid -up-|> Laba4.Grafick.Graph
  Laba4.Grafick.Window o-- Laba4.Grafick.Grid : grid


right footer

PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
